# MotionPad

./: AGENTS.md  CHANGELOG.md  CMakeLists.txt  PROFILE_REFERENCE.md  README.md  THIRD-PARTY-NOTICES.txt  app.rc
include/: psnavigator.h
include/psmoveapi/: psmove_config.h
lib/: ViGEmClient.def  libnavinput.def  libpsmoveapi.def
lib/SDL3/: SDL3.def
runtime/: settings.ini
runtime/profiles/: arrow mode.ini  controller mode.ini  default - xinput only.ini  default.ini  hybrid mode.ini  wasd mode.ini
src/: app_common.h  app_context.c  app_context.h  device_manager.c  device_manager.h  input_actions.c  input_actions.h  logger.c  logger.h  main.c  move_input.c  move_input.h  nav_device.c  nav_device.h  navigator_input.c  navigator_input.h  profile.c  profile.h  profile_watcher.c  profile_watcher.h  rumble_manager.c  rumble_manager.h  telemetry.c  telemetry.h  tray_ui.c  tray_ui.h  vigem_manager.c  vigem_manager.h
tests/: CMakeLists.txt  test_input_actions.c
